Update Switching units to metrics

--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,7 @@ h1 {
   text-align: center;
   width: 100%;
   margin: 1rem auto;
+  margin-bottom: 10rem;
   padding: 1rem;
   border-radius: 12px;
   background-color: rgba(255, 255, 255, 0.2);
